--- a/frontend/src/app/components/main/main.component.html
+++ b/frontend/src/app/components/main/main.component.html
@@ -23,6 +23,15 @@
   </tr>
 </tbody>
 </table>
+<div class="delete-order">
+  <h2>Delete Order</h2>
+  <label></label>
+  <select #orderSelect (change)="onChange(orderSelect.value)" [(ngModel)]="deleteOrderID">
+      <option *ngFor="let order of orders" [value]="order.orderID">{{order.orderID}}</option>
+  </select>
+  <br>
+  <br>
+  <button (click)="deleteOrder()">delete</button><span *ngIf="deletingOrder"></span>
 <div class="create-order">
   <h2>add an order</h2>
   <label>Customer </label>
@@ -57,5 +66,6 @@
   <br>
   <button (click)="createOrder()">Create Order</button>
   <!-- <button (click)="deleteOrder()">deleteOrder</button> -->
+
 </div>
 
