--- a/frontend/src/app/components/main/main.component.html
+++ b/frontend/src/app/components/main/main.component.html
@@ -1,3 +1,4 @@
+<!-- Order Table -->
 
 <table>
   <thead>
@@ -23,6 +24,8 @@
   </tr>
 </tbody>
 </table>
+<!-- Delete order -->
+
 <div class="delete-order">
   <h2>Delete Order</h2>
   <label></label>
@@ -32,6 +35,8 @@
   <br>
   <br>
   <button (click)="deleteOrder()">delete</button><span *ngIf="deletingOrder"></span>
+<!-- Add order -->
+
 <div class="create-order">
   <h2>add an order</h2>
   <label>Customer </label>
